News in 42.1, 2022-05-27
------------------------
* Translation updates.

News in 42.0, 2022-04-01
----------------------------
* Rename display name back to gedit
* Build fix
* Translation updates

News in 41.0, 2022-02-14
----------------------------
* Fix some crashes, one when opening files, another when
  deleting the open folder with the file browser plugin active
* Fix buttons in the color scheme selector dialog
* Build fixes
* Improve symbolic icon coloring
* Improve Save As behavior when saving error infobar is showing
* Translation updates
* Note that gnome-text-editor will be GNOME's recommended text
  editor beginning with the GNOME 42 release next month

News in 41.alpha, 2021-07-17
----------------------------
* Replace use of Tepl and AMTK
* Use sourceview4 in the snap build
* Enable OpenLink plugin by default
* Warn when trying to open a big file and allow to cancel
* Port open-selector to GDateTime
* Allow disabling gspell and python options
* Fix parsing of font-family strgins when they contain whitespace
* Translation updates.

News in 40.1, 2021-04-17
------------------------
* Use document folder when opening new files
* Huge CPU consumption when a folder with content is deleted
* Updated translations

News in 40, 2021-03-19
----------------------------
* Remove all the deprecated API.
* file-browser: drop use of confirm-trash
* Translation updates.

Tepl-ification:
* Use tepl_pango_font_description_to_css().
* Use TeplLanguageChooser's.
* Use TeplProgressInfoBar.
* Start to use TeplBuffer and TeplFile APIs.
  As a result the new tabs are now named "Untitled File", not
  "Untitled Document".

News in 3.38.1, 2020-11-20
--------------------------
* AppData: change donation URL to Liberapay.
* Improvements to the user manual.
* Translation updates.

News in 3.38.0, 2020-09-11
--------------------------
* Translation updates.

News in 3.37.92, 2020-09-04
---------------------------
* A few code refactorings.
* CI: small update.