@@ -36,15 +36,13 @@
   <translation type="gettext">gedit</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="43.alpha" date="2022-07-06" />
+    <release version="42.1" date="2022-05-27" />
     <release version="42.0" date="2022-04-01" />
     <release version="41.0" date="2022-02-14" />
     <release version="40.1" date="2021-04-17" />
     <release version="40.0" date="2021-03-19" />
     <release version="3.38.0" date="2020-09-11" />
-    <release version="3.37.92" date="2020-09-04" />
-    <release version="3.37.3" date="2020-07-03" />
-    <release version="3.37.2" date="2020-05-29" />
-    <release version="3.37.1" date="2020-04-24" />
     <release version="3.36.1" date="2020-03-20" />
     <release version="3.36.0" date="2020-03-06" />
   </releases>
