@@ -1,3 +1,8 @@
+News in 43.alpha, 2022-07-06
+----------------------------
+* Update app description.
+* Translation updates.
+
 News in 42.1, 2022-05-27
 ------------------------
 * Translation updates.
